tests/negative/test_cast_prim_tuple.orb
fnc main () () {
    cast (i32 i32) 100;
};